--- a/index.html
+++ b/index.html
@@ -817,6 +817,22 @@
 </div>
 <!-- Footer copyright END -->
 
+<!-- Back to top -->
+<div class="back-top"><a href="https://wa.me/message/M2OHWYN37AWQL1"><i class="text-primary fab fa-whatsapp fa-whatsapp-square fa-fw"></i></a></div>
+
+<!-- =======================
+JS libraries, plugins and custom scripts -->
+
+<!-- Bootstrap JS -->
+<script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Vendors -->
+<script src="assets/vendor/tiny-slider/tiny-slider.js"></script>
+
+
+<!--Functions-->
+<script src="assets/js/functions.js"></script>
+
 		</div>
 	</footer>
 	<!-- End Main Footer -->
