--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							
 
 								</li>
-								<li class="dropdown"><a href="#">Shop</a>
+								<li class="dropdown"><a href="shop.html">Shop</a>
 									<ul>
 										<li><a href="shop.html">Our Products</a> </li>
 										<li><a href="shop.html">Product Single <a>Cooporate Branding</a>
@@ -817,8 +817,7 @@
 </div>
 <!-- Footer copyright END -->
 
-<!-- Back to top -->
-<div class="back-top"><a href="https://wa.me/message/M2OHWYN37AWQL1"><i class="text-primary fab fa-whatsapp fa-whatsapp-square fa-fw"></i></a></div>
+
 
 <!-- =======================
 JS libraries, plugins and custom scripts -->
