--- a/index.html
+++ b/index.html
@@ -507,10 +507,10 @@
 					<div class="inner-box">
 						<div class="image">
 							<div class="tag">new</div>
-							<a href="shop.html"><img src="assets/products/box%20branding%20in%20lagos%20abuja%20nigeria.png" alt="" /></a>
+							<a href="shop.html"><img src="images/resource/company-letterhead-design-and-printing-in-nigeria.jpg" alt="" /></a>
 						</div>
 						<div class="lower-content">
-							<h6><a href="shop.html">Box Branding</a></h6>
+							<h6><a href="shop.html">Brand Company Letterhead Design and Printing in Nigeria</a></h6>
 							<div class="rating">
 								Rating: &nbsp;
 								<span class="fa fa-star"></span>
