--- a/shop 2.html
+++ b/shop 2.html
@@ -8,6 +8,9 @@
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
 
+   <!-- Theme CSS -->
+	 <link id="style-switch" rel="stylesheet" type="text/css" href="assets/style.css">
+
 <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -401,7 +404,7 @@
 									<!-- Card footer -->
 									<div class="card-footer text-center p-0">
 											<!-- Button -->
-											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 									</div>
 							</div>
 					</div>
@@ -420,7 +423,7 @@
 								<!-- Card footer -->
 								<div class="card-footer text-center p-0">
 										<!-- Button -->
-										<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+										<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 								</div>
 						</div>
 				</div>
@@ -439,7 +442,7 @@
 								<!-- Card footer -->
 								<div class="card-footer text-center p-0">
 										<!-- Button -->
-										<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+										<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 								</div>
 						</div>
 				</div>
@@ -458,7 +461,7 @@
 								<!-- Card footer -->
 								<div class="card-footer text-center p-0">
 										<!-- Button -->
-										<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+										<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 								</div>
 						</div>
 				</div>
@@ -477,7 +480,7 @@
 									<!-- Card footer -->
 									<div class="card-footer text-center p-0">
 											<!-- Button -->
-											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 									</div>
 							</div>
 					</div>
@@ -496,7 +499,7 @@
 									<!-- Card footer -->
 									<div class="card-footer text-center p-0">
 											<!-- Button -->
-											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 									</div>
 							</div>
 					</div>
@@ -515,7 +518,7 @@
 									<!-- Card footer -->
 									<div class="card-footer text-center p-0">
 											<!-- Button -->
-											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 									</div>
 							</div>
 					</div>
@@ -534,7 +537,7 @@
 																<!-- Card footer -->
 																<div class="card-footer text-center p-0">
 																		<!-- Button -->
-																		<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+																		<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 																</div>
 														</div>
 												</div>
@@ -553,7 +556,7 @@
 									<!-- Card footer -->
 									<div class="card-footer text-center p-0">
 											<!-- Button -->
-											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 									</div>
 							</div>
 					</div>
@@ -573,7 +576,7 @@
 									<!-- Card footer -->
 									<div class="card-footer text-center p-0">
 											<!-- Button -->
-											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 									</div>
 							</div>
 					</div>
@@ -592,7 +595,7 @@
 									<!-- Card footer -->
 									<div class="card-footer text-center p-0">
 											<!-- Button -->
-											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 									</div>
 							</div>
 					</div>
@@ -611,7 +614,7 @@
 									<!-- Card footer -->
 									<div class="card-footer text-center p-0">
 											<!-- Button -->
-											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Order Now</a>
+											<a href="+" class="btn btn-sm btn-primary-soft mb-0"></i>Requset a Quote</a>
 									</div>
 							</div>
 					</div>
@@ -619,10 +622,10 @@
 						<!-- Styled Pagination -->
 						<ul class="styled-pagination text-center">
 							<li class="next"><a href="shop.html"><span class="fa fa-angle-double-left"></span></a></li>
-							<li><a href="#" class="active">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li class="next"><a href="#"><span class="fa fa-angle-double-right"></span></a></li>
+							<li><a href="shop 2.html" class="active">2</a></li>
+							<li><a href="shop 3.html">3</a></li>
+							<li><a href="shop 4.html">4</a></li>
+							<li class="next"><a href="shop 3.html"><span class="fa fa-angle-double-right"></span></a></li>
 						</ul>
 						<!-- End Styled Pagination -->
 						
